--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
 	"scripts": {
   "dev": "nodemon api/server.js",
   "start": "node api/server.js",
-
-  
-  "client:install": "npm install --prefix client",
+  "client:install": "npm install --force --prefix client",
   "client:build": "npm run build --prefix client",
   "build": "npm run client:install && npm run client:build",
   "postinstall": "npm run client:install"
