--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"dev": "nodemon api/server.js",
-		"build": "npm install && npm install --prefix client && npm run build --prefix client",
-		"start": "node api/server.js"
-	},
+  "dev": "nodemon api/server.js",
+  "start": "node api/server.js",
+  "build": "cd client && npm install && npm run build"
+},
 	"keywords": [],
 	"author": "",
 	"type": "module",
