--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"scripts": {
   "dev": "nodemon api/server.js",
   "start": "node api/server.js",
-  "build": "cd client && npm install && npm run build"
+  "build": "cd client && npm install && npx vite build"
 },
 	"keywords": [],
 	"author": "",
