--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
 	"main": "index.js",
 	"scripts": {
   "dev": "nodemon api/server.js",
-  "start": "node api/server.js",
-  "build": "cd client && npm install && npx vite build"
+   "build": "npm install && cd client && npm install && npm run build",
+   "start": "node api/server.js"
 },
 	"keywords": [],
 	"author": "",
